--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         "ext-iconv": "*",
         "symfony/asset": "6.2.*",
         "symfony/console": "6.2.*",
-        "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
@@ -64,5 +63,14 @@
             "allow-contrib": false,
             "require": "6.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/debug": "^4.4",
+        "symfony/debug-bundle": "6.2.*",
+        "symfony/dotenv": "6.2.*",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/stopwatch": "6.2.*",
+        "symfony/var-dumper": "6.2.*",
+        "symfony/web-profiler-bundle": "6.2.*"
     }
 }
